<resources>
    <string name="app_name">WhatsUp</string>
    <string name="facebookBtnText">SIGN IN WITH FACEBOOK</string>
    <string name="emailBtnText">SIGN IN WITH EMAIL</string>
    <string name="demoText">DEMO</string>
    <string name="menuText">Swedish</string>
    <string name="commentBoxText">Type a comment</string>
    <string name="commentText">Comments</string>
    <string name="doCommentText">Comment</string>
    <string name="shareText">Share</string>
    <string name="likeText">Like</string>
    <string name="answerText">Answer</string>
    <string name="regUsernameText">Username</string>
    <string name="regEmailText">Email</string>
    <string name="regPassText">Password</string>
    <string name="regConfirmPassText">Confirm password</string>
    <string name="regSubmitButton">Register</string>
</resources>
