<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whatUpBackgroundColor"
    tools:context="com.whatsup.hawre.whatsup.adapters.activities.TopicActivity">


    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:id="@+id/whatsUpSlider"
        android:background="@color/colorPrimaryDark" />


    <RelativeLayout
        android:id="@+id/TopBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/whatsUpSlider"
        android:orientation="vertical"
        android:layout_margin="10dp"
        style="@style/Divider">

        <ImageButton
            android:id="@+id/likeButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/like"
            />

        <EditText
            android:id="@+id/likeRate"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:text="20"
            android:focusableInTouchMode="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:background="#00000000"
            android:textSize="18dp"
            android:textStyle="normal"
            android:layout_toRightOf="@+id/likeButton"/>

        <ImageButton
            android:id="@+id/unLikeButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_toRightOf="@+id/likeRate"
            android:layout_marginTop="10dp"
            android:background="@drawable/unlike" />

        <EditText
            android:id="@+id/unLikeRate"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:text="20"
            android:focusableInTouchMode="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:background="#00000000"
            android:textSize="18dp"
            android:textStyle="normal"
            android:layout_toRightOf="@+id/unLikeButton"/>

        <EditText
            android:id="@+id/commentRate"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="209"
            android:focusableInTouchMode="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:background="#00000000"
            android:textSize="18dp"
            android:textStyle="normal"
            android:layout_toRightOf="@+id/unLikeRate"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commentText"
            android:layout_toRightOf="@+id/unLikeRate"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:focusableInTouchMode="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:background="#00000000"
            android:textSize="18dp"
            android:textStyle="normal" />
    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/TopBar"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        style="@style/Divider">

        <ImageButton
            android:id="@+id/commentIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/comment"
            android:layout_margin="5dp"
            />

        <EditText
            android:id="@+id/commentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doCommentText"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/commentIcon"
            android:focusableInTouchMode="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:background="#00000000"
            />

        <ImageButton
            android:id="@+id/shareIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/commentText"
            android:background="@drawable/share"/>


        <EditText
            android:id="@+id/shareText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/shareIcon"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/shareIcon"
            android:layout_toRightOf="@+id/shareIcon"
            android:background="#00000000"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/shareText" />

    </RelativeLayout>

    <EditText
        android:id="@+id/commentBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/whatsUpSlider"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/whatsUpSlider"
        android:ems="10"
        android:hint="@string/commentBoxText"
        android:inputType="textPersonName" />


</RelativeLayout>
